--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,11 @@
   border: 2px solid var(--orange);
 }
 
+.button:disabled{
+  background-color: silver;
+  pointer-events: disabled;
+}
+
 ::-webkit-scrollbar{
   display: none;
 }
